--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,7 +108,7 @@
 
 
     <div id="button">Random</div>
-    
+
 	<div class="content">
       <%= yield %>
       </div>
@@ -168,16 +168,13 @@
            $('.main-header').stop().animate({lineHeight: "100px"},timedure);
         }
      });
-<<<<<<< HEAD
-//      </script>
-=======
+</script>
+
 </script>
 
 <script>
   $(document).ready(function() {
     $("#button").click(function() {
->>>>>>> post_info
-
         var parent = $(".contentBox");
         var divs = parent.children();
         while (divs.length) {
