--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,15 +77,13 @@
     </div>
 
       <div class="header-icon-container">
-          
           <div class="extra-button" data-sidebar-button>
-            <i class="fa fa-bars"></i>
+            <i class="fa fa-bars extra-icon"></i>
           </div>
+      </div>
 
-          <div class="search-container">
+      <div class="search-container">
             <i class="fa fa-search search-icon"></i>
-          </div>
-
       </div>
 
     <div class="sidebar" data-sidebar>
@@ -107,7 +105,7 @@
       </div>
 
 
-    <div id="button">Random</div>
+    <div id="random-button">Random</div>
 
 	<div class="content">
       <%= yield %>
@@ -148,8 +146,7 @@
         var scrollTop = $(window).scrollTop();
         var timedure = 400
         if (scrollTop > 250) {
-           $('.header-icon-container').stop().animate({height: "50px"},timedure);
-           $('.search-container').stop().animate({margin: "0px"},timedure);
+           $('.search-container').stop().animate({marginTop: "0px"},timedure);
            $('.extra-button').stop().animate({margin: "0px"},timedure);
            $('.sidebar').stop().animate({marginTop: "50px"},timedure);
            $('.header').stop().animate({height: "50px"},timedure);
@@ -158,8 +155,7 @@
            $('.main-header').stop().animate({lineHeight: "50px"},timedure);
         }
         else {
-           $('.header-icon-container').stop().animate({height: "100px"},timedure);
-           $('.search-container').stop().animate({margin: "25px"},timedure);
+           $('.search-container').stop().animate({marginTop: "27.5px"},timedure);
            $('.extra-button').stop().animate({margin: "25px"},timedure);
            $('.sidebar').stop().animate({marginTop: "100px"},timedure);
            $('.header').stop().animate({height: "100px"},timedure);  
@@ -174,7 +170,7 @@
 
 <script>
   $(document).ready(function() {
-    $("#button").click(function() {
+    $("#random-button").click(function() {
         var parent = $(".contentBox");
         var divs = parent.children();
         while (divs.length) {
