--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -169,9 +169,9 @@ nav ul ul li:hover a {
 
 
 /*  --------------------------------------- SearchBar ------------------ */
- .search-container {
+ .search-button {
   position: fixed;
-  margin-top:27.5px;
+  margin-top:27px;
   cursor: pointer;
   right:90px;
   float: right;
@@ -179,28 +179,25 @@ nav ul ul li:hover a {
   z-index: 10;
  }
 
- .search-container i {
+ .search-button i {
   font-size: 1.5rem;
 }
 
-.search-container:hover {
+.search-button:hover {
   color: $primarycolor;
 }
 /*--------------------------------------- Side Bar ------------------ */
-.header-icon-container {
+
+.extra-button {
   position: fixed;
   top:0;
   right: 0;
-  height: 100px;
-  float: right;
-  z-index: 13;
-}
-
-.extra-button {
-  margin:25px;
+  margin-top:25px;
+  margin-right: 25px;
   cursor: pointer;
   float: right;
   padding: 5px;
+  z-index: 13;
 }
 
 .extra-button i {
@@ -257,8 +254,8 @@ nav ul ul li:hover a {
     font-size: 3rem;
     position: absolute;
     z-index: 10;
-    margin-top: 200px;
-    margin-left: 550px;
+    left:200px;
+    top:200px;
     cursor: pointer;
 }
 
