--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,13 +76,11 @@
       </nav>
     </div>
 
-      <div class="header-icon-container">
-          <div class="extra-button" data-sidebar-button>
+      <div class="extra-button" data-sidebar-button>
             <i class="fa fa-bars extra-icon"></i>
-          </div>
       </div>
 
-      <div class="search-container">
+      <div class="search-button">
             <i class="fa fa-search search-icon"></i>
       </div>
 
@@ -105,7 +103,7 @@
       </div>
 
 
-    <div id="random-button">Random</div>
+    <div id="random-button">Randomise Videos</div>
 
 	<div class="content">
       <%= yield %>
@@ -146,8 +144,8 @@
         var scrollTop = $(window).scrollTop();
         var timedure = 400
         if (scrollTop > 250) {
-           $('.search-container').stop().animate({marginTop: "0px"},timedure);
-           $('.extra-button').stop().animate({margin: "0px"},timedure);
+           $('.search-button').stop().animate({marginTop: "0px"},timedure);
+           $('.extra-button').stop().animate({marginTop: "0px"},timedure);
            $('.sidebar').stop().animate({marginTop: "50px"},timedure);
            $('.header').stop().animate({height: "50px"},timedure);
            $('.logo a').stop().animate({padding: "18px"},timedure);
@@ -155,8 +153,8 @@
            $('.main-header').stop().animate({lineHeight: "50px"},timedure);
         }
         else {
-           $('.search-container').stop().animate({marginTop: "27.5px"},timedure);
-           $('.extra-button').stop().animate({margin: "25px"},timedure);
+           $('.search-button').stop().animate({marginTop: "27px"},timedure);
+           $('.extra-button').stop().animate({marginTop: "25px"},timedure);
            $('.sidebar').stop().animate({marginTop: "100px"},timedure);
            $('.header').stop().animate({height: "100px"},timedure);  
            $('.logo a').stop().animate({padding: "30px"},timedure);
