--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -97,6 +97,10 @@
                   <% else %>
                       <li><%= link_to 'Login', new_user_session_path, class: 'new-post'  %> </li>
                   <% end %>
+                  <div class="static">
+                    <li><%= link_to 'About', new_user_session_path, class: 'static-pages'  %> </li>
+                    <li><%= link_to 'Contact Us', new_user_session_path, class: 'static-pages'  %> </li>
+                  </div>
             </ul>
         </div>  
   
