--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,8 +1,16 @@
-
+<div class="container">
+<div class="vote-wrap">
+	<%= button_to upvote_post_path(post), class: 'upvote', :remote => true, :method => :post do %>
+  		&#9650;
+  		<br>
+  		<span class="votes"><%= post.votes.count %></span>
+	<% end %>
+</div>
 <div class="post-container" onclick="play(this)">
 
 	<% if post.url.include?("youtube") || post.url.include?("vimeo") %>
-		<div class="overlay2" > 
+
+		<div class="overlay" > 
 			<span class="post-information">
 				<h5 class="post-description"><%= post.description %></h5>
 				<p class="created-at"><%= time_ago_in_words(post.created_at) %> ago</p>
@@ -12,7 +20,7 @@
 			<%= embed(post.url) %>
 		</div>
 	<%else%>
-		<a class="overlay2" href="<%= post.article_url %>" onclick="window.open(this.href); return false;"> 
+		<a class="overlay" href="<%= post.article_url %>" onclick="window.open(this.href); return false;"> 
 			<span class="post-information">
 				<h5 class="post-description"><%= post.description %></h5>
 				<p class="created-at"><%= time_ago_in_words(post.created_at) %> ago</p>
@@ -23,7 +31,7 @@
 		</div>  
 	<% end %>
 </div>
-
+</div>
 
 
 
