most recent button added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -111,6 +111,8 @@
 
 
     <div id="random-button">Randomise Videos</div>
+    <div class="mostrecent-button" onclick="window.location.reload(true)">Latest Videos</div>
+
 
 	<div class="content">
       <%= yield %>
