--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -167,6 +167,41 @@ nav ul ul li:hover a {
 }
 
 
+/*  --------------------------------------- Hero Buttons------------------ */
+
+
+#random-button {
+    font-size: 3rem;
+    position: absolute;
+    z-index: 7;
+    padding: 5px;
+    right:50px;
+    top:145px;
+    cursor: pointer;
+    color:$backgroundcolor;
+    border:2px solid $backgroundcolor;
+}
+
+#random-button:hover {
+  background-color: rgba(0,0,0,0.1);
+}
+
+.mostrecent-button {
+    font-size: 3rem;
+    position: absolute;
+    z-index: 7;
+    padding: 5px;
+    left:50px;
+    top:145px;
+    cursor: pointer;
+    color:$backgroundcolor;
+    border:2px solid $backgroundcolor;
+}
+
+.mostrecent-button:hover {
+  background-color: rgba(0,0,0,0.1);
+}
+
 /*  --------------------------------------- SearchBar ------------------ */
  .search-button {
   position: fixed;
@@ -258,21 +293,6 @@ nav ul ul li:hover a {
   color:  $primarycolor;
 }
 
-#random-button {
-    font-size: 3rem;
-    position: absolute;
-    z-index: 7;
-    padding: 5px;
-    left:435px;
-    top:145px;
-    cursor: pointer;
-    color:$backgroundcolor;
-    border:2px solid $backgroundcolor;
-}
-
-#random-button:hover {
-  background-color: rgba(0,0,0,0.1);
-}
 
 [data-sidebar-dimmer] {
  display: none;
