--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -310,11 +310,7 @@ nav ul ul li:hover a {
   padding: 0;
 }
 
-.video {
-  border-radius:3px;
-}
-
-.post-container { 
+.main-container {
   display:inline-block;
   cursor: pointer;
   width:49.2%;
@@ -325,6 +321,29 @@ nav ul ul li:hover a {
   text-decoration: none;
   border-radius: 0px;
   z-index: 3;
+}
+
+.vote-wrapper {
+  position: absolute;
+  font-size: 2.5rem;
+  z-index: 10;
+  text-align: center;
+  width: 100px;
+  background: grey;
+}
+
+.vote-wrapper a{
+  position: relative;
+}
+
+.vote-wrapper a{
+text-decoration: none;
+color: white;
+width: 100%;
+}
+
+.video {
+  border-radius:3px;
 }
 
 .post-container img {
@@ -403,7 +422,6 @@ iframe {
 .pagination a, .pagination em , .pagination span {
   display:none;
 }
-
 
 /*------------------------------------------Footer--------------------------------------*/
 
