--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,9 +80,25 @@
             <i class="fa fa-bars extra-icon"></i>
       </div>
 
+
+      <div class="login-button">
+        <% if user_signed_in? %>
+                 <%= link_to  "#{current_user.username}", root_path ,  class: 'current-user' %>
+                 <%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'user-logout'  %> 
+          <%else%>
+            <%= link_to new_user_session_path,  class: 'user-login' do %>
+                  <i class="fa fa-user user-icon"></i>
+                  <% end %>
+          <% end %>
+        </div>  
+
+
+
+
       <div class="search-button">
             <i class="fa fa-search search-icon"></i>
       </div>
+
 
     <div class="sidebar" data-sidebar>
 
@@ -92,11 +108,6 @@
                       <li><%= link_to 'New Post' , new_post_path , class: 'new-post' %></li>
                       <li><%= link_to 'New Category' , new_category_path , class: 'new-post' %></li>
                   <%end%>
-                  <% if user_signed_in? %>
-                      <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'new-post'  %></li>        
-                  <% else %>
-                      <li><%= link_to 'Login', new_user_session_path, class: 'new-post'  %> </li>
-                  <% end %>
             </ul>
             <ul>
                   <div class="static-links">
@@ -154,7 +165,8 @@
         var timedure = 500
         if (scrollTop > 250) {
            $('.static-links').stop().animate({bottom: "60px"},timedure);
-           $('.search-button').stop().animate({marginTop: "0px"},timedure);
+           // $('.search-button').stop().animate({marginTop: "0px"},timedure);
+           // $('.login-button').stop().animate({marginTop: "0px"},timedure);
            $('.extra-button').stop().animate({marginTop: "0px"},timedure);
            $('.sidebar').stop().animate({marginTop: "50px"},timedure);
            $('.header').stop().animate({height: "50px"},timedure);
@@ -164,8 +176,9 @@
         }
         else {
            $('.static-links').stop().animate({bottom: "110px"},timedure);
-           $('.search-button').stop().animate({marginTop: "27px"},timedure);
-           $('.extra-button').stop().animate({marginTop: "25px"},timedure);
+           // $('.search-button').stop().animate({marginTop: "27px"},timedure);
+           // $('.login-button').stop().animate({marginTop: "27px"},timedure);
+           $('.extra-button').stop().animate({marginTop: "27px"},timedure);
            $('.sidebar').stop().animate({marginTop: "100px"},timedure);
            $('.header').stop().animate({height: "100px"},timedure);  
            $('.logo a').stop().animate({padding: "30px"},timedure);
