fixing heade icons on scroll

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -169,8 +169,8 @@
         var timedure = 500
         if (scrollTop > 250) {
            $('.static-links').stop().animate({bottom: "60px"},timedure);
-           // $('.search-button').stop().animate({marginTop: "0px"},timedure);
-           // $('.login-button').stop().animate({marginTop: "0px"},timedure);
+           $('.search-button').stop().animate({marginTop: "0px"},timedure);
+           $('.login-button').stop().animate({marginTop: "0px"},timedure);
            $('.extra-button').stop().animate({marginTop: "0px"},timedure);
            $('.sidebar').stop().animate({marginTop: "50px"},timedure);
            $('.header').stop().animate({height: "50px"},timedure);
@@ -180,8 +180,8 @@
         }
         else {
            $('.static-links').stop().animate({bottom: "110px"},timedure);
-           // $('.search-button').stop().animate({marginTop: "27px"},timedure);
-           // $('.login-button').stop().animate({marginTop: "27px"},timedure);
+           $('.search-button').stop().animate({marginTop: "27px"},timedure);
+           $('.login-button').stop().animate({marginTop: "27px"},timedure);
            $('.extra-button').stop().animate({marginTop: "27px"},timedure);
            $('.sidebar').stop().animate({marginTop: "100px"},timedure);
            $('.header').stop().animate({height: "100px"},timedure);  
