--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -402,23 +402,21 @@ nav ul ul li:hover a {
   z-index: 3;
 }
 
+/* - -  - - - - - - - Voting  - - - - -  */
+
 .vote-wrapper {
   position: absolute;
   font-size: 2.5rem;
   z-index: 10;
   text-align: center;
   width: 100px;
-  background: grey;
 }
 
 .vote-wrapper a{
   position: relative;
-}
-
-.vote-wrapper a{
-text-decoration: none;
-color: white;
-width: 100%;
+  text-decoration: none;
+  color: white;
+  width: 100%;
 }
 
 .video {
