style changes and adding hero phrase

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,6 +126,7 @@
 
 
     <div id="random-button">Randomise Videos</div>
+    <div class="hero-phrase">Self-educate.</div>
     <div class="mostrecent-button" onclick="window.location.reload(true)">Latest Videos</div>
 
 
