--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -29,7 +29,7 @@ body {
 .cover-photo { 
   width:100%;
   margin: 0 0 4px 0;  
-  max-height:300px;
+  max-height:350px;
   float: left;
   position: relative;
   overflow:hidden;
@@ -170,35 +170,35 @@ nav ul ul li:hover a {
 /*  --------------------------------------- Hero Buttons------------------ */
 
 
+#random-button , .mostrecent-button {
+    font-size: 3rem;
+    position: absolute;
+    z-index: 7;
+    padding: 5px;
+    top:250px;
+    cursor: pointer;
+    color:$backgroundcolor;
+    border:2px solid $backgroundcolor;
+}
+
 #random-button {
-    font-size: 3rem;
-    position: absolute;
-    z-index: 7;
-    padding: 5px;
     right:50px;
-    top:145px;
-    cursor: pointer;
-    color:$backgroundcolor;
-    border:2px solid $backgroundcolor;
 }
 
-#random-button:hover {
-  background-color: rgba(0,0,0,0.1);
-}
-
-.mostrecent-button {
+.hero-phrase {
     font-size: 3rem;
     position: absolute;
     z-index: 7;
     padding: 5px;
-    left:50px;
-    top:145px;
-    cursor: pointer;
+    left:475px;
+    top:150px;
     color:$backgroundcolor;
-    border:2px solid $backgroundcolor;
+}
+.mostrecent-button {
+    left:50px;
 }
 
-.mostrecent-button:hover {
+#random-button:hover , .mostrecent-button:hover {
   background-color: rgba(0,0,0,0.1);
 }
 
