--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -188,6 +188,7 @@ nav ul ul li:hover a {
 .hero-phrase {
     font-size: 3rem;
     position: absolute;
+    cursor:default;
     z-index: 7;
     padding: 5px;
     left:475px;
