--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -9,9 +9,6 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
-  <!--<script src="http://use.typekit.net/koq1kyb.js"></script>
-  <script>try{Typekit.load();}catch(e){}</script>-->
-
 </head>  
   
 <body>
@@ -39,16 +36,14 @@
                  <% if current_user.try(:admin?) %>
                       <li><%= link_to 'New Post' , new_post_path , class: 'new-post' %></li>
                       <li><%= link_to 'New Category' , new_category_path , class: 'new-post' %></li>
-                  <%end%>
-                  <% if user_signed_in? %>
-                      <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete, class: 'new-post'  %></li>        
-                  <% else %>
-                      <li><%= link_to 'Login', new_user_session_path, class: 'new-post'  %> </li>
-                  <% end %>
-                  <div class="static">
+                  <%end%>            
+            </ul>
+            <ul>
+                  <div class="static-links">
                     <li><%= link_to 'About', static_pages_about_path, class: 'static-pages'  %> </li>
                     <li><%= link_to 'Help', static_pages_help_path, class: 'static-pages'  %> </li>
                     <li><%= link_to 'Contact Us', static_pages_contact_us_path, class: 'static-pages'  %> </li>
+                    <li><%= link_to 'Copyright', static_pages_copyright_path, class: 'static-pages'  %> </li>
                   </div>
             </ul>
         </div>  
@@ -64,12 +59,6 @@
 
       <div class="breaker">
       </div>
-  
-  
-
-    <div class="footer"> 
-      <a href="footer/copyrightpolicy.html" class="copyright"> Copyright Policy </a>       
-    </div>
   
   </div>
 
