--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,7 +4,7 @@
 
 
 /*-------------------------------------Constants---------------------------------------*/
-$bluecolor: #85CDC0;  // blue  //
+$bluecolor: #81B6DB;  // blue  //
 $greencolor: #77DD77;    // green // 
 $redcolor: #FF4955;   // red //
 $orangecolor: #FFB246;   // orange //
