--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,5 +1,5 @@
 /*-------------------------------------Constants---------------------------------------*/
-$bluecolor: #85CDC0;  // blue  //
+$bluecolor: #81B6DB;  // blue  //
 $greencolor: #77DD77;    // green // 
 $redcolor: #FF4955;   // red //
 $orangecolor: #FFB246;   // orange //
@@ -118,9 +118,10 @@ nav ul li a {
 
 nav ul ul {
   display:none;
+  z-index: 2;
   position:absolute;
   background-color:$bluecolor;
-  border-radius:0 0 3px 3px;
+  border-radius:0 0 3px 3px; 
 }
 
 .healthy-scroll {
