--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,4 +1,6 @@
 /*-------------------------------------Constants---------------------------------------*/
+
+
 $bluecolor: #81B6DB;  // blue  //
 $greencolor: #77DD77;    // green // 
 $redcolor: #FF4955;   // red //
@@ -7,6 +9,7 @@ $whitecolor: #fff;     // white //
 
 
 /*-------------------------------------Main Style---------------------------------------*/
+
 body {
   background:$whitecolor;
   color:#fff;
@@ -43,10 +46,10 @@ body {
 
 .img-cover {
   position: absolute;
-  top:100px;
+  top:0px;
   left:0;
   width:100%;
-  height:300px;
+  height:400px;
   background-color:$bluecolor;
   opacity: 0.7;
 }
@@ -391,11 +394,11 @@ nav ul ul li:hover a {
 
 .main-container {
   cursor:pointer;
-  width:49.2%;
+  width:45%;
   float:left;
   position:relative;
   overflow:hidden;
-  margin:.4%;
+  margin:2.5%;
   text-decoration:none;
   border-radius:0;
   z-index:3
@@ -411,14 +414,14 @@ nav ul ul li:hover a {
 
 .link-container {
   width:100%;
-  height:332px;
+  height:320px;
   position:relative;
   border:0
 }
 
 iframe {
   width:100%;
-  height:332px;
+  height:320px;
   position:relative;
   border:0
 }
