--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -14,6 +14,7 @@ body {
   background:$whitecolor;
   color:#fff;
   margin:0;
+  padding: 0;
   font-family:'Roboto',sans-serif;
   font-weight:200;
   font-size:67.5%
@@ -24,15 +25,16 @@ body {
 }
 
 .wrapper {
+  margin: 0;
   width:100%
 }
 
 /*--------------------------------------Cover pic---------------------------------------*/
 
 .cover-photo {
-  width:100%;
-  height: 400px;
-  margin:0 0 4px;
+  width:100vw;
+  height: 100vh;
+  margin:0;
   float:left;
   position:relative;
   overflow:hidden;
@@ -40,16 +42,21 @@ body {
   border-radius:3px
 }
 
-.cover-photo img {
-  width:100%
+.cover-photo iframe{
+  width:100%;
+  height: 120vh;
+  overflow-y:hidden;
+  z-index:-5;
 }
 
 .img-cover {
   position: absolute;
-  top:0px;
+  top:0;
   left:0;
+  margin: 0;
+  padding: 0;
   width:100%;
-  height:400px;
+  height:100vh;
   background-color:$bluecolor;
   opacity: 0.7;
 }
@@ -58,12 +65,12 @@ body {
 /*--------------------------------------Main Title--------------------------------------*/
 .header {
   width:100%;
-  height:100px;
+  height:10vh;
   position:fixed;
   background-color:$redcolor;
   // box-shadow:0 0 10px 0 rgba(0,0,0,0.6);
   z-index:8;
-  opacity: 1;
+  opacity: 0.95;
 }
 
 /*--------------------------------------Home button--------------------------------------*/
@@ -76,7 +83,7 @@ body {
 .header .logo a {
   position:relative;
   font-size:2rem;
-  line-height:100px;
+  line-height:10vh;
   font-weight:500;
   text-decoration:none;
   color:$whitecolor;
@@ -85,7 +92,7 @@ body {
 
 /*------------------------------------Title Bar/Drop Down--------------------------------*/
 .main-header {
-  line-height:100px;
+  line-height:10vh;
   float:left;
   z-index:5;
   margin-left:170px
@@ -93,6 +100,7 @@ body {
 
 .healthy-header,.wealthy-header,.wise-header {
   width:150px;
+  height: 10vh;
   text-align:center
 }
 
@@ -153,8 +161,8 @@ nav ul ul li a {
   font-size:1rem;
   padding:5px 20px;
   margin:0;
-  height:30px;
-  line-height:30px;
+  height:25px;
+  line-height:25px;
   color:#fff
 }
 
@@ -176,7 +184,7 @@ nav ul ul li:hover a {
 .hero-buttons{
   position: absolute;
   z-index:7;
-  top:250px;
+  top:350px;
   margin-left:450px;
 }
 #random-button,.mostrecent-button {
@@ -190,6 +198,21 @@ nav ul ul li:hover a {
   border-radius: 3px;
 }
 
+.start-watching {
+   font-size:2rem;
+  width:100%;
+  position:absolute;
+  text-align:center;
+  cursor:default;
+  z-index:7;
+  padding:5px;
+  left:0;
+  margin: 0;
+  padding: 0;
+  top:500px;
+  color:$whitecolor;
+}
+
 .mostrecent-button {
   display:inline-block;
   float: left;
@@ -199,7 +222,7 @@ nav ul ul li:hover a {
 #random-button {
   display:inline-block;
   float: right;
-  margin-left:40px
+  margin-left:20px
 }
 
 .hero-phrase {
@@ -211,7 +234,9 @@ nav ul ul li:hover a {
   z-index:7;
   padding:5px;
   left:0;
-  top:150px;
+  margin: 0;
+  padding: 0;
+  top:200px;
   color:$whitecolor;
 }
 
@@ -223,7 +248,7 @@ nav ul ul li:hover a {
 /*  --------------------------------------- Icon Bar ------------------ */
 .search-button,.login-button {
   position:fixed;
-  margin-top:27px;
+  margin-top:1.6vh;
   cursor:pointer;
   float:right;
   padding:10px;
@@ -287,8 +312,8 @@ nav ul ul li:hover a {
   position:fixed;
   top:0;
   right:0;
-  margin-top:27px;
-  margin-right:27px;
+  margin-top:1.75vh;
+  margin-right:3vh;
   cursor:pointer;
   float:right;
   padding:10px;
@@ -309,7 +334,7 @@ nav ul ul li:hover a {
 .sidebar {
   height:100%;
   right:-200px;
-  margin-top:100px;
+  margin-top:10vh;
   background-color:$bluecolor;
   // box-shadow:0 0 10px 0 rgba(0,0,0,0.5);
 }
@@ -376,13 +401,6 @@ nav ul ul li:hover a {
 
 /*--------------------------------------- Content --------------------------------------*/
 .content {
-  padding-bottom:30px
-}
-
-.breaker {
-  height:20px;
-  width:100%;
-  display:inline-block
 }
 
 .contentBox {
@@ -394,14 +412,14 @@ nav ul ul li:hover a {
 
 .main-container {
   cursor:pointer;
-  width:45%;
+  width:50%;
   float:left;
   position:relative;
   overflow:hidden;
-  margin:2.5%;
+  margin:0%;
   text-decoration:none;
   border-radius:0;
-  z-index:3
+  z-index:3;
 }
 
 .post-container img {
@@ -414,14 +432,14 @@ nav ul ul li:hover a {
 
 .link-container {
   width:100%;
-  height:320px;
+  height:45vh;
   position:relative;
   border:0
 }
 
 iframe {
   width:100%;
-  height:320px;
+  height:45vh;
   position:relative;
   border:0
 }
