--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <div class="cover-photo">
             <div class="img-cover">
             </div>
-              <img src="https://unsplash.imgix.net/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?q=75&amp;fm=jpg&amp;s=d8cce13e5d977aeec5bdbec256987adf" alt="Cover 1"/>
+              <iframe frameborder="0" allowfullscreen="" src="http://www.youtube.com/embed/S3fTw_D3l10?rel=0&amp;modestbranding=1&amp;autohide=1&amp;showinfo=0&amp;controls=1&amp;autoplay=1&amp;loop=1"></iframe>
             
   </div>
 
@@ -120,14 +120,13 @@
       <div class="mostrecent-button" onclick="window.location.reload(true)">Latest Videos</div>
       <%= link_to 'Randomize' , randomize_posts_path , id: 'random-button' %>
     </div>
-
+    
+      <div class="start-watching">Start watching now</div>
 
 	<div class="content">
       <%= yield %>
       </div>
 
-      <div class="breaker">
-      </div>
   </div>
 
 
