styling scroll arrow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,9 @@
     </div>
     
       <div class="start-watching">Start watching now</div>
-      <div class="scroll-to-content"><button type="button">Click Me!</button></div>
+      <div class="scroll-to-content">
+        <i class="fa fa-angle-double-down scroll-arrow"></i>
+      </div>
 
 	<div class="content">
       <%= yield %>
