--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -87,11 +87,12 @@ body {
 .header .logo a {
   position:relative;
   font-size:2rem;
+  margin: 0;
   line-height:10vh;
   font-weight:500;
   text-decoration:none;
   color:$whitecolor;
-  padding:40px
+  padding:20px 30px 15px 40px
 }
 
 /*------------------------------------Title Bar/Drop Down--------------------------------*/
@@ -218,18 +219,30 @@ nav ul ul li:hover a {
 }
 
 .scroll-to-content {
-  font-size:2rem;
+  font-size:3rem;
   width:100%;
   position:absolute;
   text-align:center;
-  cursor:default;
   z-index:7;
   padding:5px;
   left:0;
   margin: 0;
   padding: 0;
-  top:550px;
+  top:560px;
   color:$whitecolor; 
+}
+
+.scroll-arrow {
+  cursor: pointer;
+  padding: 10px;
+  -webkit-animation: pulsate 2s ease-out;
+  -webkit-animation-iteration-count: infinite; 
+}
+
+@-webkit-keyframes pulsate {
+    0% {-webkit-transform: scale(1)}
+    50% {-webkit-transform: scale(1.15)}
+    100% {-webkit-transform: scale(1)}
 }
 
 .mostrecent-button {
