--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <div class="cover-photo">
             <div class="img-cover">
             </div>
-              <img src="https://unsplash.imgix.net/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?q=75&amp;fm=jpg&amp;s=d8cce13e5d977aeec5bdbec256987adf" alt="Cover 1"/>
+              <iframe src="http://www.youtube-nocookie.com/embed/S3fTw_D3l10?rel=0&amp;modestbranding=1&amp;autohide=1&amp;showinfo=0&amp;controls=1&amp;autoplay=1" frameborder="0" allowfullscreen="" src="http://www.youtube-nocookie.com/embed/S3fTw_D3l10?rel=0&amp;modestbranding=1&amp;autohide=1&amp;showinfo=0&amp;controls=1&amp;autoplay=1"></iframe>
             
   </div>
 
