--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -46,12 +46,12 @@ body {
   width:100%;
 }
 
-// .cover-photo iframe{
-//   width:100%;
-//   height: 120vh;
-//   overflow-y:hidden;
-//   z-index:-5;
-// }
+.cover-photo iframe{
+  width:100%;
+  height: 120vh;
+  overflow-y:hidden;
+ z-index:-5;
+}
 
 .img-cover {
   position: absolute;
