--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -29,8 +29,12 @@ body {
 }
 
 .static-page-header {
-	margin-left: 570px;
 	font-size: 2.2rem;
+      margin: 0 auto;
+      padding: 0;
+}
+
+.static-page-header h1 {
 }
 
 
