--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -22,7 +22,7 @@
 
     <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
           <div class="logo"><%= link_to 'TEA.', root_path %></div>
-          <h1 class="static-page-header"><%= @title %> </h1> 
+          <h1 class="static-page-header center"><%= @title %> </h1> 
     </div>
 
       <div class="extra-button" data-sidebar-button>
