--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,7 @@
   <div class="cover-photo">
             <div class="img-cover">
             </div>
-
-              <iframe src="http://www.youtube-nocookie.com/embed/S3fTw_D3l10?rel=0&amp;modestbranding=1&amp;autohide=1&amp;showinfo=0&amp;controls=1&amp;autoplay=1" frameborder="0" allowfullscreen="" src="http://www.youtube-nocookie.com/embed/S3fTw_D3l10?rel=0&amp;modestbranding=1&amp;autohide=1&amp;showinfo=0&amp;controls=1&amp;autoplay=1"></iframe>
-
+              <img src="https://unsplash.imgix.net/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?q=75&amp;fm=jpg&amp;s=d8cce13e5d977aeec5bdbec256987adf" alt="Cover 1"/>
             
   </div>
 
@@ -122,16 +120,14 @@
       <div class="mostrecent-button" onclick="window.location.reload(true)">Latest Videos</div>
       <%= link_to 'Randomize' , randomize_posts_path , id: 'random-button' %>
     </div>
-    
-      <div class="start-watching">Start watching now</div>
-      <div class="scroll-to-content">
-        <i class="fa fa-angle-double-down scroll-arrow"></i>
-      </div>
+
 
 	<div class="content">
       <%= yield %>
       </div>
 
+      <div class="breaker">
+      </div>
   </div>
 
 
@@ -139,6 +135,14 @@
 <!-- - - - - - - - -  - - - - - - - - - - - - - - java - - - - - - - - - - - - - - - - - - - - - - - - -->    
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
+<script>
+$(document).ready(function() {
+  $(window).resize(function() {
+
+    $(".cover-photo").css(‘height’, window.innerHeight+’px’);
+});
+})
+</script>
 
 <script>
   function play(object){
@@ -149,14 +153,17 @@
   }
 </script>
 
-<script >
-  $(".scroll-to-content").click(function() {
-    $('html,body').animate({
-        scrollTop: $(".main-container").offset().top},
-        'slow');
-});
+<script>
+  $(document).ready(function() {
+    $("#random-button").click(function() {
+        var parent = $(".contentBox");
+        var divs = parent.children();
+        while (divs.length) {
+            parent.append(divs.splice(Math.floor(Math.random() * divs.length), 1)[0]);
+        }
+    })
+  });
 </script>
-
 
 </body>
 </html>
