--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
   <div class="cover-photo">
             <div class="img-cover">
             </div>
-              <img src="https://unsplash.imgix.net/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?q=75&amp;fm=jpg&amp;s=d8cce13e5d977aeec5bdbec256987adf" alt="Cover 1"/>
+            <img src="https://unsplash.imgix.net/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?q=75&amp;fm=jpg&amp;s=d8cce13e5d977aeec5bdbec256987adf" alt="Cover 10">
+              <!-- <iframe frameborder="0" allowfullscreen="" src="whttp://www.youtube.com/embed/S3fTw_D3l10?rel=0&amp;modestbranding=1&amp;loop=1&amp;autohide=1&amp;showinfo=0&amp;controls=1&amp;autoplay=1"></iframe> -->
             
   </div>
 
@@ -120,14 +121,16 @@
       <div class="mostrecent-button" onclick="window.location.reload(true)">Latest Videos</div>
       <%= link_to 'Randomize' , randomize_posts_path , id: 'random-button' %>
     </div>
+    
+      <div class="start-watching">Start watching now</div>
+      <div class="scroll-to-content">
+        <i class="fa fa-angle-double-down scroll-arrow"></i>
+      </div>
 
-
-	<div class="content">
+  <div class="content">
       <%= yield %>
       </div>
 
-      <div class="breaker">
-      </div>
   </div>
 
 
@@ -135,14 +138,6 @@
 <!-- - - - - - - - -  - - - - - - - - - - - - - - java - - - - - - - - - - - - - - - - - - - - - - - - -->    
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
-<script>
-$(document).ready(function() {
-  $(window).resize(function() {
-
-    $(".cover-photo").css(‘height’, window.innerHeight+’px’);
-});
-})
-</script>
 
 <script>
   function play(object){
@@ -153,17 +148,14 @@ $(document).ready(function() {
   }
 </script>
 
-<script>
-  $(document).ready(function() {
-    $("#random-button").click(function() {
-        var parent = $(".contentBox");
-        var divs = parent.children();
-        while (divs.length) {
-            parent.append(divs.splice(Math.floor(Math.random() * divs.length), 1)[0]);
-        }
-    })
-  });
+<script >
+  $(".scroll-to-content").click(function() {
+    $('html,body').animate({
+        scrollTop: $(".main-container").offset().top},
+        'slow');
+});
 </script>
+
 
 </body>
 </html>
