--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -46,12 +46,12 @@ body {
   width:100%;
 }
 
-/*.cover-photo iframe{
-  width:100%;
-  height: 120vh;
-  overflow-y:hidden;
-  z-index:-5;
-}*/
+// .cover-photo iframe{
+//   width:100%;
+//   height: 120vh;
+//   overflow-y:hidden;
+//   z-index:-5;
+// }
 
 .img-cover {
   position: absolute;
@@ -526,14 +526,14 @@ iframe {
   font-size:2.5rem;
   z-index:10;
   text-align:center;
-  width:100px
+  width:100px;
 }
 
 .vote-wrapper a {
   position:relative;
   text-decoration:none;
   color:#fff;
-  width:100%
+  width:100%;
 }
 
 /*- - - - - - - - - - - Bookmarks - - - -  - - - - - - - - - - */
@@ -541,11 +541,10 @@ iframe {
 .bookmark-wrapper {
   float:right;
   position:absolute;
-  font-size:2.5rem;
+  font-size:3rem;
   z-index:10;
+  color:black;
   text-align:center;
-  width:100px;
-  background:grey
 }
 
 
@@ -611,4 +610,3 @@ iframe {
 .field {
   color:$redcolor;
 }
-
