--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -3,11 +3,9 @@
 			<%= render 'like', post: post %>
 	</div>
 	<div class="bookmark-wrapper">
-		<%= button_to bookmark_post_path(post), class: 'bookmark' do %>
-	        &#9650;
-	        <br>
-	        <span class="bookmarks"><%= post.bookmarks.count %></span>
-	    <% end %>
+		<%= link_to bookmark_post_path(post), remote: true, method: :put, id: dom_id(post), class: 'bookmark' do %>
+    		<i class="fa fa-bookmark"></i>
+    	<%end%>
     </div>
 
 	<div class="post-container" onclick="play(this)">
