easing and ting

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -457,6 +457,14 @@ nav ul ul li:hover a {
 }
 
 /*--------------------------------------- Content --------------------------------------*/
+
+.breaker {
+	height:10vh;
+	position: absolute;
+	top:90vh;
+	left: 0;
+	width: 100%;
+}
 .content {
 }
 
