--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -102,7 +102,8 @@ iframe {
   font-size:2.5rem;
   z-index:10;
   text-align:center;
-  width:100px;
+  right: 0;
+  bottom: 0;
 }
 
 .vote-wrapper a {
