--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -102,18 +102,17 @@ iframe {
   font-size:2.5rem;
   z-index:10;
   text-align:center;
-  width:100px;
+  bottom:20px;
+  right:20px;
 }
 
-.lightbulb {
-
+.vote-number {
+  float: right;
 }
 
-.vote-wrapper a {
-  position:relative;
-  text-decoration:none;
-  color:#fff;
-  width:100%;
+.vote-wrapper a{
+  text-decoration: none;
+  color:white;
 }
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
