--- a/app/views/posts/_like.html.erb
+++ b/app/views/posts/_like.html.erb
@@ -1,4 +1,6 @@
-	    	<%= link_to like_post_path(post), remote: true, method: :put, id: dom_id(post), class:'lightublb' do %>
+	    	<%= link_to like_post_path(post), remote: true, method: :put, id: dom_id(post) do %>
 	    		<i class="fa fa-lightbulb-o"></i>
 	    	<%end%>
-	    	<%= post.get_upvotes.size %>
+	    	<div class="vote-number">
+	    		<%= post.get_upvotes.size %>	    		
+	    	</div>
