--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -58,7 +58,11 @@ body {
   bottom:110px
 }
 
-.static-pages {
+.static-links .selected{
+  color:$redcolor;
+}
+
+.static-pages a{
   text-decoration:none;
   color:#fff
 }
