--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -40,10 +40,10 @@
             </ul>
             <ul>
                   <div class="static-links">
-                    <li><%= link_to 'About', static_pages_about_path, class: 'static-pages'  %> </li>
-                    <li><%= link_to 'Help', static_pages_help_path, class: 'static-pages'  %> </li>
-                    <li><%= link_to 'Contact Us', static_pages_contact_us_path, class: 'static-pages'  %> </li>
-                    <li><%= link_to 'Copyright', static_pages_copyright_path, class: 'static-pages'  %> </li>
+                    <li><div class="static-pages"><%= nav_link_to 'About', static_pages_about_path %></div></li>
+                    <li><div class="static-pages"><%= nav_link_to 'Help', static_pages_help_path %></div></li>
+                    <li><div class="static-pages"><%= nav_link_to 'Contact Us', static_pages_contact_us_path %></div></li>
+                    <li><div class="static-pages"><%= nav_link_to 'Copyright', static_pages_copyright_path %></div> </li>
                   </div>
             </ul>
         </div>  
